[gd_scene load_steps=16 format=2]

[ext_resource path="res://AvatarRoulette.gd" type="Script" id=1]
[ext_resource path="res://sceneBackgrounds/AnimatedTileBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/bgs/paper_lines.jpg" type="Texture" id=3]
[ext_resource path="res://gfx/particles/avcont_01.png" type="Texture" id=4]
[ext_resource path="res://gfx/particles/avcont_02.png" type="Texture" id=5]
[ext_resource path="res://gfx/particles/avcont_03.png" type="Texture" id=6]
[ext_resource path="res://gfx/particles/avcont_04.png" type="Texture" id=7]
[ext_resource path="res://avatars/PartRotator.tscn" type="PackedScene" id=8]
[ext_resource path="res://sfx/bgm/vallenato.ogg" type="AudioStream" id=9]
[ext_resource path="res://fonts/Chewy-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://ui/CurrentCamera.tscn" type="PackedScene" id=11]
[ext_resource path="res://sfx/cui1.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/redoble.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "appear",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[node name="AvatarRoulette" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 93.4816, 969.836 ],
"_edit_vertical_guides_": [ 1085.53, 1258.14, 2103.51, 1716.31 ]
}

[node name="Fondo" parent="." instance=ExtResource( 2 )]

[node name="paper_lines" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
position = Vector2( 1123.16, 525.543 )
rotation = -0.223722
scale = Vector2( 0.395745, 0.68 )
texture = ExtResource( 3 )

[node name="paper_lines2" type="Sprite" parent="."]
position = Vector2( 1114.35, 531.416 )
rotation = -0.017213
scale = Vector2( 0.395745, 0.68 )
texture = ExtResource( 3 )

[node name="ResultZone" type="Node2D" parent="."]
position = Vector2( 1192.14, 528.538 )

[node name="ZoneFrame" type="AnimatedSprite" parent="ResultZone"]
frames = SubResource( 2 )
animation = "appear"

[node name="FinalFeet" type="Node2D" parent="ResultZone"]
position = Vector2( 6.84961, 284.257 )
scale = Vector2( 0.6, 0.6 )

[node name="FinalTorso" type="Node2D" parent="ResultZone"]
scale = Vector2( 0.6, 0.6 )

[node name="FinalHead" type="Node2D" parent="ResultZone"]
position = Vector2( -10.2739, -277.407 )
scale = Vector2( 0.6, 0.6 )

[node name="PartRotator" parent="." instance=ExtResource( 8 )]
position = Vector2( 1092.31, 554.965 )
scale = Vector2( 0.6, 0.6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
autoplay = true

[node name="FinalAvatarTimer" type="Timer" parent="."]

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 804.702
margin_top = 909.045
margin_right = 1549.7
margin_bottom = 1064.05
custom_fonts/font = SubResource( 1 )
text = "[CurrentPlayer]"

[node name="CurrentCamera" parent="." instance=ExtResource( 11 )]
rotation = 0.0

[node name="PickPart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Redoble" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="buildAvatar" from="PartRotator" to="." method="_on_PartRotator_buildAvatar"]
[connection signal="registeredPart" from="PartRotator" to="." method="_on_PartRotator_registeredPart"]
[connection signal="timeout" from="FinalAvatarTimer" to="." method="_on_FinalAvatarTimer_timeout"]
